# testu01-rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  rustfmt.toml
SP800-90B-sys/: Cargo.toml  build.rs
examples/: small_crush_xorshift.rs
examples/small_crush_xorshift/: main.rs  xorshift.rs
nist-sts/: .gitignore  Makefile
practrand-sys/: Cargo.toml  build.rs  wrapper.h
src/: battery.rs  decorators.rs  lib.rs  swrite.rs  unif01.rs
testu01-sys/: Cargo.toml  build.rs  wrapper.h
