[package]
name = "testu01"
version = "0.0.1"
authors = ["Loïc Damien <loic.damien@dzamlo.ch>"]

[features]
nightly = ["i128_support"]
i128_support = ["rand/i128_support"]

[dependencies]
lazy_static = "0.1.15"
libc = "0.2.0"
rand = { path = "/home/pitdicker/rust/rand" }
rand_core = { path = "/home/pitdicker/rust/rand/rand_core" }

