[workspace]
members = [".", "testu01-sys", "practrand-sys"]
resolver = "2"

[package]
name = "testu01"
version = "0.1.0"
authors = [
    "Loïc Damien <loic.damien@dzamlo.ch>",
    "Kamyar Mohajerani <kammoh@gmail.com>",
]
edition = "2021"

[dependencies]
testu01-sys = { path = "testu01-sys" }
lazy_static = "1.5.0"
libc = "0.2.172"
rand = "0.9.1"
rand_core = "0.9.3"
indexmap = "2.9.0"

[build-dependencies]
cargo-emit = "0.2.1"
